# sr-vulkan

./: .gitignore  .gitmodules  MANIFEST.in  README.md  build.ps1  build.sh  build_mac.sh  setup.py  setup2.py  setup3.py
sr_ncnn_vulkan/: hook-sr_ncnn_vulkan.py  sr_ncnn_vulkan.pyi
sr_vulkan/: enum.py  hook-sr_vulkan.py  sr_vulkan.pyi
src/: CMakeLists.txt  apng_image.h  deps_codec.cmake  deps_ncnn.cmake  jpeg_image.h  other_image.h  png_image.h  realcugan.cpp  realcugan.h  realesrgan.cpp  realesrgan.h  realesrgan_postproc.spv.hex.h  realesrgan_postproc_fp16s.spv.hex.h  realesrgan_postproc_int8s.spv.hex.h  realesrgan_postproc_tta.spv.hex.h  realesrgan_postproc_tta_fp16s.spv.hex.h  realesrgan_postproc_tta_int8s.spv.hex.h  realesrgan_preproc.spv.hex.h  realesrgan_preproc_fp16s.spv.hex.h  realesrgan_preproc_int8s.spv.hex.h  realesrgan_preproc_tta.spv.hex.h  realesrgan_preproc_tta_fp16s.spv.hex.h  realesrgan_preproc_tta_int8s.spv.hex.h  realsr.cpp  realsr.h  waifu2x.cpp  waifu2x.h  waifu2x_main.cpp  waifu2x_main.h  waifu2x_postproc.comp.hex.h  waifu2x_postproc_tta.comp.hex.h  waifu2x_preproc.comp.hex.h  waifu2x_preproc_tta.comp.hex.h  waifu2x_py.cpp  waifu2x_py.h  webp_image.h
src/libpng/: CMakeLists.txt
test/: cost.py  test.py
